Added exporter support with RDF